fix(sidenav): hide scrollbar unless there is overflow

--- a/packages/theme-patternfly-org/layouts/sideNavLayout/sideNavLayout.css
+++ b/packages/theme-patternfly-org/layouts/sideNavLayout/sideNavLayout.css
@@ -18,7 +18,6 @@
 
 .ws-page-sidebar {
   box-shadow: none !important;
-  overflow-y: scroll;
 }
 
 .ws-page-sidebar > .pf-c-page__sidebar-body {
